<resources>
    <string name="app_name">SoftwareApp</string>

    <string name="LinkToSite">
        <a href="https://www.mentalhealthireland.ie/?gclid=Cj0KCQiAhKviBRCNARIsAAGZ7CcvEsdTcXs6_6EdpYSZQsW_5b8WoNCx9EhUP7n2_B-ED8oxJGIIV3oaAs0eEALw_wcB">
            Mental Health Ireland

        </a>
    </string>

    <string name="LinkToSite2">
        <a href="https://iacp.ie/?gclid=Cj0KCQiAkMDiBRDNARIsACKP1FELb16Sq7iVqwXfAJe2SBuVP04vJptQioGwBxuxs1T3AxySV_kbf2saAg15EALw_wcB">

         ICAP
        </a>
    </string>

    <string name="LinkToSite3">
        <a href="https://www.altruism.ie/charity/pieta-house?gclid=Cj0KCQiAkMDiBRDNARIsACKP1FH62CCT5ID6bkFbngLm-5npANOr26MNGAvoXy8pWUpLfREJNQfi9_MaAgruEALw_wcB">

            Pieta House

        </a>
    </string>

    <string name="LinkToSite4">
        <a href="https://www.samaritans.org/your-community/samaritans-ireland-scotland-and-wales/samaritans-ireland?gclid=Cj0KCQiAkMDiBRDNARIsACKP1FGu9VvFxBd1RnTxhENlIvix7oznFTDJ1m3dRapuQ1zv8WuoL3CubCUaAtp_EALw_wcB">

            Samaritans Ireland

        </a>
    </string>

    <string name="LinkToSite5">
        <a href="https://www.aware.ie/">

          Aware

        </a>
    </string>


    <string name="LinkToSite6">
        <a href="https://ie.reachout.com/">

     Reach Out

        </a>
    </string>


    <string name="LinkToSite7">
        <a href="https://seechange.ie/">

     See Change

        </a>
    </string>

    <string name="LinkToSite8">
        <a href="https://www.mhfaireland.ie/what-is-mental-health-first-aid">

    Mental Health First Aid

        </a>
    </string>
    <string name="nav_user">user</string>
    <string name="nav_msg">msg</string>
    <string name="nav_users"><font size="15">Users</font></string>
    <string name="nav_msgs"><font size="15">Chat</font></string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="how">How Are You Feeling?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_nav_drawer">navDrawer</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="my_mental_health">My Mental Health</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="register">Register</string>
    <string name="password_must_be_at_least_10_characters_with_no_spaces">Password must be at least 10 characters with no spaces</string>
    <string name="password_must_have_at_least_one_capital_letter">Password must have at least one Capital Letter</string>
    <string name="password_must_have_at_least_one_number">Password must have at least one Number</string>
    <string name="return_to_login">Return To Login</string>
    <string name="please_enter_your_email">Please Enter your Email</string>
    <string name="reset">Reset</string>
    <string name="by_clicking_reset_you_will_receive_an_email_to_reset_your_password">By clicking RESET, you will receive an email to reset your password</string>
    <string name="chat">CHAT</string>
    <string name="journal">JOURNAL</string>
    <string name="audio">AUDIO</string>
    <string name="support">SUPPORT</string>

</resources>
